--- a/RAIL_GRIND_RUMBLE/Packages/manifest.json
+++ b/RAIL_GRIND_RUMBLE/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.3.0",
     "com.unity.postprocessing": "2.3.0",
+    "com.unity.probuilder": "5.0.6",
     "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.test-framework": "1.1.31",
