Beginnings of the Singleton Progression Manager and using it to persist values through sccenes

--- a/RAIL_GRIND_RUMBLE/UserSettings/Search.settings
+++ b/RAIL_GRIND_RUMBLE/UserSettings/Search.settings
@@ -16,6 +16,9 @@ scopes = {
 	"last_search.DE949528" = "scene"
 	"OpenInspectorPreview.DE949528" = "0"
 	"currentGroup.DE949528" = "all"
+	"last_search.2138236A" = "scene"
+	"OpenInspectorPreview.2138236A" = "1"
+	"currentGroup.2138236A" = "_group_provider_Files"
 }
 providers = {
 	adb = {
