--- a/RAIL_GRIND_RUMBLE/UserSettings/Search.settings
+++ b/RAIL_GRIND_RUMBLE/UserSettings/Search.settings
@@ -13,7 +13,7 @@ scopes = {
 	"last_search.DD5CDD96" = "car"
 	"OpenInspectorPreview.DD5CDD96" = "0"
 	"currentGroup.DD5CDD96" = "scene"
-	"last_search.DE949528" = "scene"
+	"last_search.DE949528" = "InputHand"
 	"OpenInspectorPreview.DE949528" = "0"
 	"currentGroup.DE949528" = "all"
 	"last_search.2138236A" = "scene"
@@ -65,6 +65,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"I"
 	"m"
 	"a"
 	"package b"
