--- a/RAIL_GRIND_RUMBLE/UserSettings/Search.settings
+++ b/RAIL_GRIND_RUMBLE/UserSettings/Search.settings
@@ -16,9 +16,9 @@ scopes = {
 	"last_search.DE949528" = "InputHand"
 	"OpenInspectorPreview.DE949528" = "0"
 	"currentGroup.DE949528" = "all"
-	"last_search.2138236A" = "scene"
+	"last_search.2138236A" = ""
 	"OpenInspectorPreview.2138236A" = "1"
-	"currentGroup.2138236A" = "_group_provider_Files"
+	"currentGroup.2138236A" = "asset"
 }
 providers = {
 	adb = {
